--- a/src/Projects/styles.css
+++ b/src/Projects/styles.css
@@ -4,7 +4,7 @@
     text-align: left;
     font-weight: 300;
     width: 60%;
-    overflow: hidden;
+    overflow: visible;
     font-size: larger;
     padding-top: 1%;
 }
@@ -13,7 +13,7 @@
     font-family: 'Lexend', sans-serif;
     list-style: none;
     font-weight: 300;
-    overflow: hidden;
+    overflow: visible;
     font-size: larger;
     display: inline-block;
     align-self: center;
